--- a/style.css
+++ b/style.css
@@ -1,3 +1,85 @@
-h1, h2 {
-  font-family: Lato;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body{
+  font-family: 'M PLUS 1 Code', sans-serif;
+  width: 100%;
+  height: 100vh;
+}
+/* Nav */
+#nav{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 10vh;
+  width: 100%;
+  border-bottom: 0.2px solid rgb(241, 237, 237);
+}
+/* logo */
+.logo{
+  font-size: 1.6rem;
+  text-decoration: line-through;
+  font-weight: 700;
+  font-family: 'Artifika', serif;
+  text-transform: lowercase;
+  color: rgba(255, 62, 13, 0.849);
+}
+.logo:hover{
+  cursor: pointer;
+  text-decoration: none;
+}
+ul li{
+  list-style-type:none;
+  
+}
+ul li a{
+  text-decoration: none;
+  font-size: 1.2rem;
+  color: rgb(65, 63, 63);
+  position: relative;
+}
+ul li a:hover{
+  color: rgb(75, 75, 250);
+}
+ul li a::after{
+  content: '';
+  width: 0px;
+  
+  height: 2px;
+  position: absolute;
+  left: 50%;
+  bottom:0;
+  background-color: rgb(75, 75, 250);
+  transition: all ease-in-out .2s;
+  margin-bottom: -5px;
+  
+}
+ul li a:hover::after{
+  width: 100%;
+  left: 0;
+}
+#nav-list{
+  display: flex;
+  width: 50%;
+  justify-content: space-evenly;
+  align-items: center;
+  margin: 0 2px;
+}
+
+.account-list{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 20%;
+}
+
+.quote{
+  background-color: rgb(75, 75, 250);
+  padding: 10px;
+  border-radius: 5px;
+  color: white;
+  
 }
