--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* CSS reset */
 *{
   margin: 0;
   padding: 0;
@@ -6,80 +7,85 @@
 
 body{
   font-family: 'M PLUS 1 Code', sans-serif;
-  width: 100%;
   height: 100vh;
 }
+
+
 /* Nav */
-#nav{
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  height: 10vh;
-  width: 100%;
-  border-bottom: 0.2px solid rgb(241, 237, 237);
+header{
+  border-bottom: 1px solid #E2E8F0;
+
 }
-/* logo */
+.nav{
+  display:flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem 1.5rem;
+}
+/* Menu icon */
+.menu{
+  display:none;
+}
+.bar{
+  width: 25px;
+  height: 3px;
+  display: block;
+  margin: 5px auto;
+  transition: all 0.3 ease-in-out;
+  background-color: #101010;
+
+}
+/* Logo */
 .logo{
   font-size: 1.6rem;
-  text-decoration: line-through;
-  font-weight: 700;
-  font-family: 'Artifika', serif;
-  text-transform: lowercase;
-  color: rgba(255, 62, 13, 0.849);
+  font-weight: 500;
+  color: orangered;
 }
-.logo:hover{
-  cursor: pointer;
-  text-decoration: none;
-}
-ul li{
-  list-style-type:none;
-  
-}
-ul li a{
-  text-decoration: none;
-  font-size: 1.2rem;
-  color: rgb(65, 63, 63);
-  position: relative;
-}
-ul li a:hover{
-  color: rgb(75, 75, 250);
-}
-ul li a::after{
-  content: '';
-  width: 0px;
-  
-  height: 2px;
-  position: absolute;
-  left: 50%;
-  bottom:0;
-  background-color: rgb(75, 75, 250);
-  transition: all ease-in-out .2s;
-  margin-bottom: -5px;
-  
-}
-ul li a:hover::after{
-  width: 100%;
-  left: 0;
-}
+/* Nav menu */
 #nav-list{
   display: flex;
-  width: 50%;
-  justify-content: space-evenly;
+  justify-content: space-between;
   align-items: center;
-  margin: 0 2px;
 }
 
-.account-list{
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  width: 20%;
+.nav-item{
+  margin-left: 5rem;
 }
 
-.quote{
-  background-color: rgb(75, 75, 250);
-  padding: 10px;
-  border-radius: 5px;
-  color: white;
-  
+.nav-link{
+  font-size: 1.4rem;
+  color:orangered;
+}
+
+.nav-link:hover{
+  color:#475569;
+}
+
+
+/* navbar media queries */
+
+@media screen and (max-width:768px) {
+  #nav-list{
+    position: fixed;
+    left: -100%;
+    top: 5rem;
+    flex-direction: column;
+    background-color: lightgray;
+    width: 100%;
+    border-radius: 10px;
+    text-align: center;
+    transition: 0.3s;
+    box-shadow: 0 10 27px rgba(0,0,0,0.05);
+
+  } 
+  #nav-list.active{
+    left: 0;
+  } 
+  .nav-item{
+    margin: 2.5rem 0;
+  }
+  .menu{
+    display: block;
+    cursor: pointer;
+  }
 }
