--- a/style.css
+++ b/style.css
@@ -7,7 +7,9 @@
 
 body{
   font-family: 'M PLUS 1 Code', sans-serif;
-  height: 100vh;
+  width: 100vw;
+  overflow-x: hidden;
+  
 }
 
 a{
@@ -22,6 +24,7 @@ li{
 /* Nav */
 header{
   border-bottom: 1px solid #E2E8F0;
+  margin-bottom: 40px;
 
 }
 .nav{
@@ -45,10 +48,11 @@ header{
 }
 /* Logo */
 .logo a{
-  font-size: 1.6rem;
+  font-size: 3rem;
   font-weight: 500;
+  font-family: 'Dancing Script', cursive;
   color: orangered;
-  text-decoration: line-through;
+  
 }
 .logo:hover{
   text-decoration:none;
@@ -66,13 +70,23 @@ header{
 
 .nav-link{
   font-size: 1.4rem;
-  color:orangered;
-}
-
-.nav-link:hover{
   color:#475569;
 }
 
+.nav-link:hover{
+  color:orangered;
+}
+
+.btn-login,.btn-signup{
+  background-color: rgb(13, 138, 138);
+  padding: 15px;
+  border-radius: 5px;
+  color: white;
+}
+.btn-login:hover,.btn-signup:hover{
+  background-color: white;
+  color:  rgb(13, 138, 138);
+}
 
 /* navbar media queries */
 
@@ -101,101 +115,184 @@ header{
     cursor: pointer;
   }
 }
-/* Hero section */
-#hero{
-  width: 100%;
-  height: 70%;
-  background: rgb(2,0,36);
-  background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(236,233,232,0.7903536414565826) 0%, rgba(64, 205, 233, 0.872) 70%);
+
+/* main section */
+
+#main{
+  width: 90vw;
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+ 
+  
+}
+.hero-description{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  /* align-items: center; */
+  flex-basis: 70%;
+  margin-left: 3rem;
+ 
+}
+.hero-description h1{
+  color: orangered;
+  font-size: 3rem;
+  padding-bottom:10px;
+}
+.hero-description .caption{
+  font-size: 1.5rem;
+  
+}
+.hero-image{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-basis: 30%;
+}
+.btn{
+  width: 200px;
+  border-radius:6px;
+  background-color: orangered;
+  margin-top:40px;
+  border:0;
+  outline: 0;
+  
+}
+.btn.get-started{
+  color: white;
+  font-size: 1.2rem;
+  font-weight: 500;
+  padding:10px;
+  
+}
+.btn.get-started:hover{
+  cursor:pointer;
+  background-color: rgb(236, 65, 2);
+}
+
+@media screen and (max-width:768px) {
+  #main{
+    width: 100vw;
+    flex-direction: column;
+  }
+  .hero-description{
+    margin-bottom: 5px;
+  }
+  .hero-description h1{
+    font-size: 1.7rem;
+  }
+  .hero-image{
+    flex-basis: 100%;
+   
+  }
+  .hero-description.caption{
+    font-size: 0.8rem;
+  }
+
+  
+}
+/* url section */
+.url{
+  width: 100vw;
+  padding:40px;
+  /* height: 100px; */
+  background-color: rgba(4, 43, 219, 0.856);
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-evenly;
-  position: relative;
-}
-.title{
-  text-align: center;
-}
-.title h1{
-  font-size: 3rem;
-  text-decoration: line-through;
-  color: orangered;
-  transition: 0.3s;
-}
-.title h1:hover{
-  text-decoration: none;
-}
-.title .sub{
-  font-size: 1.6rem;
-  color: rgb(243, 65, 0);
-  font-weight: 700;
-}
-.title .caption{
-  padding-top: 3px;
-  color: #474545;
-  font-size: 1.1rem;
-  font-weight: 600;
-}
-#form{
-  width: 90%;
-  padding: 20px;
-  background-color: rgb(9, 107, 107);
-  border-radius: 15px;
-  display: flex;
-  align-items: center;
-
-  
-}
-#url-input{
-  position: relative;
-  width: 100%;
-  padding: 10px;
-  outline:none;
-  border: 0;
-  border-radius: 5px;
-  font-size: 1.5rem;
-  color: rgb(43, 42, 42);
-  font-weight: 300;
-  box-shadow: 2px 3px 10px rgb(59, 56, 56) ;
-  
-}
-input[type='submit']{
- position: absolute;
- right: 7%;
- padding: 10px;
- border-radius: 5px;
- border:0;
- outline: none;
- background-color: orangered;
- color: white;
-cursor: pointer;
-}
-
-.result{
-  position: absolute;
-  width: 90%;
-  height: 100px;
-  background-color: rgb(9, 107, 107);
-  display: none;
-  transition: all 3s ease-in-out;
  
 }
-.result.show{
-  display: block;
-  bottom:-20px;
+
+#form{
   display: flex;
   align-items: center;
   justify-content: center;
+  
+  
+}
+.url-input-box{
+  width: 50vw;
+  padding:15px;
+  border: 0;
+  font-size: 1.4rem;
+  border-radius: 5px;
+  margin-right: 10px;
+}
+.url-input-box:focus{
+  outline:2px double rgb(32, 226, 226);
+}
+.btn-shorten{
+ 
+  padding:15px 10px;
+  border: 0;
+  border-radius: 5px;
+  font-size: 1.5rem;
+  color:white;
+  background-color: rgb(13, 138, 138);
+  cursor: pointer;
 }
 
-.error-message{
-  border:0;
-  border-bottom: 2px solid grey;
+.tos{
+  font-size: 0.7rem;
   text-align: center;
-  background-color: inherit;
-  padding: 10px;
-  width: 60%;
-  color: rgb(207, 157, 157);
-  font-weight: bold;
-  font-size: 2rem;
+  color: white;
+  text-decoration: underline;
+  margin-top: 5px;
+  cursor: pointer;
 }
+
+.results{
+  width: 65vw;
+  border-radius: 5px;
+  margin-top: 30px;
+  background-color: rgb(238, 238, 238);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  
+}
+.single-result{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 65vw;
+  padding: 20px;
+  border-bottom: 0.6px solid rgb(192, 191, 191);
+}
+.url-link{
+  background-color: rgb(145, 187, 187);
+  color: white;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+@media screen and (max-width:768px) {
+  #form{
+    flex-direction: column;
+    gap:15px;
+  }
+  .url-input-box,.btn-shorten{
+    width: 90vw;
+  }
+  
+}
+
+@media screen and (max-width:500px) {
+  .single-result{
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+  }
+  .url-link{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  
+    width: 50vw;
+  }
+}
+
